# annotation-protocol

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  build-package.yml  pyproject.toml
.github/workflows/: validate_pipeline.yml
annotation_protocol/: AnnotationProtocol.py  __init__.py  _version.py  annotation_protocol.py  check_annotations.py  utils.py
tests/: test_annotation_protocol.py
